--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,10 @@ google_analytics: UA-86389306-2
 
 plugins:
   - jekyll-feed
+social_links:
+  facebook: deepakmahakale1
+  github: deepakmahakale
+  stackoverflow: 4758119/deepak-mahakale
+  instagram: deepakmahakale
+  linkedin: deepakmahakale
+  twitter: deepakmahakale
