SEO and opengraph

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,29 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - jekyll-sitemap
+
+# SEO Stuff
+author:
+  twitter: deepakmahakale
+twitter:
+  username: deepakmahakale
+  card: summary_large_image
+social:
+  name: Deepak Mahakale
+  links:
+    - https://github.com/deepakmahakale
+    - https://stackoverflow.com/users/4758119/deepak-mahakale
+    - https://www.linkedin.com/in/deepakmahakale
+    - https://twitter.com/deepakmahakale
+    - https://www.facebook.com/deepakmahakale1
+    - https://www.instagram.com/deepakmahakale
+defaults:
+  - scope:
+      path: ""
+    values:
+      image: /assets/images/default-card.png
+
+# Social sites for footer
 social_links:
   facebook: deepakmahakale1
   github: deepakmahakale
