--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Deepak Mahakale
 email: deepakmahakale@gmail.com
-description: >-
-  Ruby on Rails Developer
+description: ""
 baseurl: ""
 url: "http://deepakmahakale.in"
 twitter_username: deepakmahakale
