--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Deepak Mahakale
 email: deepakmahakale@gmail.com
 description: ""
 baseurl: ""
-url: "http://deepakmahakale.in"
+url: "https://deepakmahakale.in"
 twitter_username: deepakmahakale
 github_username:  deepakmahakale
 google_tag_manager_id: GTM-WRTX84W
