software development industry -> IT industry

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Deepak Mahakale
 email: deepakmahakale@gmail.com
 description: >-
   Software professional with over 8 years of experience in the
-  software development industry.
+  IT industry.
 baseurl: ''
 url: 'https://deepakmahakale.in'
 twitter_username: deepakmahakale
