--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >-
   Software professional with over 8 years of experience in the
   IT industry.
 baseurl: ''
-url: 'https://deepakmahakale.in'
+url: 'https://deepakmahakale.com'
 twitter_username: deepakmahakale
 github_username: deepakmahakale
 google_tag_manager_id: GTM-WRTX84W
